[package]
name = "image-to-minecraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = {version = "0.24", features = ["png"], default-features = false}
palette = "0.6"
kdtree = "*"

[dependencies.kmeans_colors]
version = "0.5.0"
features = ["palette_color"]
default-features = false
